--- a/contacts-filtering/src/webparts/filtreContactsQuietalis/components/FiltreContactsQuietalis.module.scss
+++ b/contacts-filtering/src/webparts/filtreContactsQuietalis/components/FiltreContactsQuietalis.module.scss
@@ -26,7 +26,7 @@
       width: 160px;
       display: block;
     }
-    .displayValue {
+    .filterLink {
       cursor: pointer;
       background-color: transparent;
       border: 0;
@@ -36,6 +36,7 @@
     }
     .refValue {
       white-space: nowrap;
+      font-size: 13px;
       overflow: hidden;
       text-overflow: ellipsis;
       word-wrap: normal;
